integration_tests/codegen_fail/fail/interface/implementers_duplicate_pretty.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: duplicated attribute argument found
  --> $DIR/implementers_duplicate_pretty.rs:16:34
   |
16 | #[graphql_interface(for = [ObjA, ObjA])]
   |                                  ^^^^

error[E0412]: cannot find type `CharacterValue` in this scope
 --> $DIR/implementers_duplicate_pretty.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Character` in this scope
  --> $DIR/implementers_duplicate_pretty.rs:10:6
   |
10 | impl Character for ObjA {
   |      ^^^^^^^^^ not found in this scope
